# gba-disasm

./: .gitignore  Cargo.toml
src/: lib.rs  types.rs
src/thumb/: addsub.rs  alu.rs  as.rs  cb.rs  conditional_branch.rs  hi_op.rs  load_addr.rs  load_store_ext.rs  load_store_halfword.rs  load_store_reg.rs  mod.rs  msr.rs  op_immediate.rs  pcrl.rs  ppreg.rs  ucb.rs  unconditional_branch.rs
