[package]
name = "gba-disasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-derive = "0.3.3"
num-traits = "0.2.14"
contracts = "0.6.2"

[dev-dependencies]
test-case = "1.2.1"
proptest = "1.0.0"
